--- a/src/app/location-details/location-details.component.html
+++ b/src/app/location-details/location-details.component.html
@@ -1,7 +1,10 @@
 <h2>Test Header</h2>
 
 <ul>
-    <li *ngFor="let pen of location.pens; let i = index">
-        <p>{{pen}} {{location.LocationName}}</p>
+    <li *ngFor="let location of locationList">
+        {{location.LocationName}}
+        <ul>
+            <li *ngFor="let pen of location.Pens">{{pen}}</li>
+        </ul>
     </li>
 </ul>
