--- a/src/app/locations-list/locations-list.component.html
+++ b/src/app/locations-list/locations-list.component.html
@@ -1,3 +1,6 @@
 <ul>
-    <li *ngFor="let location of locationList">{{location.LocationName}}</li>
+    <li *ngFor="let location of locationList">
+        <a (click)="onSelectedPen(location)">{{location.LocationName}}</a>
+    </li>
+
 </ul>
